<resources>
    <string name="app_name">BirthdayApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="greetings">Greetings</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="new_birthday">New birthday</string>
    <string name="new_anniversary">New anniversary</string>
    <string name="birthdays">Birthdays</string>
    <string name="cards">Cards</string>
    <string name="add_birthdays_and_anniversaries">Add birthdays and anniversaries</string>
    <string name="never_forget_to_wish_your_loved_ones">Never forget to wish your loved ones.</string>
    <string name="birthday">Birthday</string>
    <string name="anniversary">Anniversary</string>
    <string name="add_new_birthday">Add new birthday</string>
    <string name="add_new_anniversary">Add new anniversary</string>
    <string name="dummy_text">6 \n Months</string>
    <string name="share_via">Share via:</string>
    <string name="copied">Copied</string>
    <string name="send_wish">Send wish</string>
    <string name="send_card">Send card</string>
    <string name="choose_a_card">Choose a card</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="zodiac">Zodiac</string>
    <string name="gifts_suggestion">Gifts Suggestion</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="please_enter_text">Please enter text !</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="name_of_the_person">Name of the person</string>
    <string name="anniversary_description">Anniversary description</string>
    <string name="send">Send</string>
    <string name="date_icon">Date icon</string>
    <string name="person_icon">Person icon</string>
    <string name="user_profile_image">User profile image</string>
    <string name="total_contact_list_size">Total contact list size : %s</string>

    //permission
    <string name="ask_for_storage_permission_button">Storage</string>
    <string name="ask_for_contacts_permission_button">Contacts</string>
    <string name="ask_for_all_permissions_button">Request all</string>
    <string name="permission_granted_feedback">GRANTED</string>
    <string name="permission_denied_feedback">DENIED</string>
    <string name="permission_permanently_denied_feedback">PERMANENTLY DENIED</string>
    <string name="permission_unknown_feedback">UNKNOWN</string>
    <string name="all_permissions_denied_feedback">All those permissions are needed for doing some magic</string>
    <string name="storage_permission_denied_feedback">Storage permission is needed for doing some magic</string>
    <string name="contacts_permission_denied_feedback">Contacts permission is needed for doing some magic</string>
    <string name="permission_rationale_title">We need this permission</string>
    <string name="permission_rationale_message">This permission is needed for doing some fancy stuff so please, allow it!</string>
    <string name="permission_rationale_settings_button_text">SETTINGS</string>
    <string name="trust_quote">The best way to find out if you can trust somebody is to trust them. ~ Ernest Hemingway</string>
    <string name="please_grant_us_few_permission_to_do_some_magic">Please grant us few permission to do some magic.</string>
    <string name="enter_birthday">Enter birthday</string>
    <string name="don_t_know_the_year_of_birth_type_in_the_age">Don\'t know the year of birth ? Type in the age:</string>
    <string name="cancel">CANCEL</string>
    <string name="enter_date">Enter date</string>
    <string name="dont_know_the_year_which_anniversary_year_was_the_latest">Don\'t know the year ? Which anniversary year was the latest?</string>
    <string name="age">Age</string>
    <string name="last_anniversary">Last anniversary</string>
    <string name="mm">MM</string>
    <string name="dash">/</string>
    <string name="dd">DD</string>
    <string name="yyyy">YYYY</string>
    <string name="added">Added !</string>
    <string name="please_enter_date">Please enter date !</string>
    <string name="please_enter_name">Please enter name !</string>
    <string name="please_enter_anniversary">Please enter anniversary description !</string>
    <string name="edit_birthday">Edit birthday</string>
    <string name="edit_anniversary">Edit anniversary</string>
    <string name="info_updated">Information updated !</string>
    <string name="please_enter_correct_month">Please enter correct month !</string>
    <string name="please_enter_correct_date">Please enter correct date !</string>
    <string name="anniversary_date">Anniversary date</string>
    <string name="turns">Turns</string>
    <string name="on">on</string>
    <string name="months">Months</string>
    <string name="new_line">\n</string>
    <string name="space">&#160;</string>
    <string name="book_chocolate">Book , Chocolate</string>
    <string name="add_birthdays_and_anniversaries_widget">Add Birthdays and Anniversaries !</string>
    <string name="birthdays_and_anniversaries">Birthdays &amp; Anniversaries !</string>
    <string name="title_activity_settings">Settings</string>
    <string name="error_getting_documents">Error getting documents.</string>
    <string name="done">Done</string>


    <!--Setting-->
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="title_birthday_reminder_notification">Birthday reminder notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="notifications_birthday_reminder">notifications_birthday_reminder</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="key_notification_time">notification_time</string>
    <string name="summary_select_notification_time">Select the notification time</string>
    <string name="title_notification_time">Notification time</string>
    <string name="profile_header_image">Profile Header Image</string>
    <string name="profile_image_holder">Profile Image holder</string>
    <string name="birth_date_icon">Birth date icon</string>
    <string name="zodiac_icon">Zodiac icon</string>
    <string name="gift_icon">Gift Icon</string>
    <string name="card_place_holder">Card Place holder</string>
    <string name="user_profile_place_holder">User profile place holder</string>
    <string name="copy_icon">Copy Icon</string>
    <string name="share_icon">Share Icon</string>
    <string name="send_wishes_and_card_button">Send wishes and card button</string>
    <string name="add_birthday_and_anniversary_button">Add birthday and anniversary button</string>

</resources>
