<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_greetings"
            android:icon="@drawable/ic_menu_greetings"
            android:title="@string/greetings" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/ic_menu_rate"
            android:title="@string/rate_us" />
    </group>


</menu>
