<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_16dp"
    android:paddingTop="@dimen/padding_16dp"
    android:paddingEnd="@dimen/padding_16dp">


    <TextView
        android:id="@+id/dialog_title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="start"
        android:text="@string/enter_birthday"
        android:textAppearance="@style/BoldFont"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_l8sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:gravity="center"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/dialog_month_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/mm"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="2"
            android:singleLine="true"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2dp"
            android:layout_marginEnd="@dimen/margin_2dp"
            android:text="@string/dash"
            android:textSize="@dimen/text_size_large" />

        <EditText
            android:id="@+id/dialog_date_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/dd"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="2"
            android:singleLine="true"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2dp"
            android:layout_marginEnd="@dimen/margin_2dp"
            android:text="@string/dash"
            android:textSize="@dimen/text_size_large" />

        <EditText
            android:id="@+id/dialog_year_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/yyyy"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="4"
            android:singleLine="true"
            android:textSize="@dimen/text_size_large" />


    </LinearLayout>


    <TextView
        android:id="@+id/dialog_subTitle_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/don_t_know_the_year_of_birth_type_in_the_age"
        android:textColor="@color/colorPrimary" />


    <EditText
        android:id="@+id/dialog_age_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_4dp"
        android:gravity="center"
        android:hint="@string/age"
        android:inputType="number"
        android:maxLength="3"
        android:singleLine="true"
        android:textSize="@dimen/text_size_large" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="end">

        <Button
            android:id="@+id/dialog_cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAppearance="@style/BoldFont"
            android:textColor="#bdbdbd"
            android:textSize="@dimen/text_size_14sp" />

        <Button
            android:id="@+id/dialog_save_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textAppearance="@style/BoldFont"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_14sp" />

    </LinearLayout>


</LinearLayout>