<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addbirthday.AddBirthdayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="@dimen/width_120dp"
                    android:layout_height="@dimen/height_120dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:layout_marginRight="@dimen/margin_16dp"
                    android:layout_marginBottom="@dimen/margin_16dp"
                    android:id="@+id/profile_imageView"
                    android:background="@drawable/user_profile"
                    android:contentDescription="@string/user_profile_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/width_28dp"
                        android:layout_height="@dimen/height_28dp"
                        android:background="@drawable/ic_person"
                        android:contentDescription="@string/person_icon" />

                    <AutoCompleteTextView
                        android:id="@+id/person_name_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8dp"
                        android:singleLine="true"
                        android:maxLength="100"
                        android:imeOptions="actionNext"
                        android:hint="@string/name_of_the_person" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/width_28dp"
                        android:layout_height="@dimen/height_28dp"
                        android:background="@drawable/ic_today"
                        android:contentDescription="@string/date_icon" />

                    <EditText
                        android:id="@+id/date_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8dp"
                        android:focusable="false"
                        android:singleLine="true"
                        android:imeOptions="actionDone"
                        android:hint="@string/date" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/save_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/margin_16dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@android:color/white" />
        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>